@@ -1,3 +1,3 @@
 @echo off
-java -Xmx768m -classpath bin/patch.jar;bin/triplea.jar  games.strategy.engine.framework.GameRunner
+java -Xmx1024m -classpath bin/patch.jar;bin/triplea.jar  games.strategy.engine.framework.GameRunner
 pause
